--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,7 +49,10 @@ dev_dependencies:
   image_picker: ^0.8.3
   dashboard: ^0.0.2+4
   get_storage: ^2.0.3
+  flutter_easyloading: ^3.0.5
   http: ^0.13.5
+  dio: ^4.0.6
+  http_parser: ^4.0.2
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
   # activated in the `analysis_options.yaml` file located at the root of your
